# youtube-grpc-rust

./: Cargo.toml  README.md  build.rs
src/: client.rs  server.rs
src/proto/: auth.proto
src/service/: auth.rs
